2011-07-05  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpprocessor.c: added comment for devices not documented
    by Microchip: 18f2681, 18f4681, 18f64j15 and 18f84j15

2011-07-04  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpprocessor.c, lkr/*.lkr:
    lkr/*.lkr renamed to lkr/*_g.lkr, synchronized with MPLABx v1.20
  * 12f683_g.lkr, 16c505_g.lkr, 16c771_g.lkr, 16f636_g.lkr,
    16f639_g.lkr, 16f677_g.lkr, 16f684_g.lkr, 16f687_g.lkr,
    16f716_g.lkr, 16f737_g.lkr, 16f747_g.lkr, 16f767_g.lkr,
    16f777_g.lkr, 16f785_g.lkr, 16f818_g.lkr, 16f819_g.lkr,
    16f916_g.lkr, 16f917_g.lkr, 16f946_g.lkr, 16hv785_g.lkr,
    mcv08a_g.lkr, mcv14a_g.lkr, mcv18a_g.lkr, mcv28a_g.lkr,
    ps500_g.lkr, ps810_g.lkr: synchronized with MPLABx v1.20
  * header/Makefile.am, patching file header/Makefile.in,
    header/p16f5x.inc: applied the back-16f5x.inc.patch.tar.7z patch
    #3539517 - "Support of new CPUs.", thanks to Molnar Karoly
  * lkr/*.lkr: removed unneeded / obsolete lkr files
  * libgputils/gpprocessor.c:  added 16f722

2011-07-03  Borut Razem  <borutr@users.sourceforge.net>
  * header/p16c61.inc, header/p16c62.inc, header/p16c64.inc,
    header/p16c65.inc, header/p16c73.inc, header/p16c74.inc,
    header/p16c84.inc:
    applied patch #3539706 - "Supplement to incomplete inc files.",
    thanks to Molnar Karoly

2011-07-02  Borut Razem  <borutr@users.sourceforge.net>
  * header/p16f1508.inc, header/p16f1783.inc, header/p16f1787.inc,
    header/p18f4520.inc, header/p18f26j11.inc, header/p18f46j11.inc,
    header/p18f26j50.inc, header/p16lf1823.inc, header/p18f46j50.inc,
    header/p18f66j50.inc, header/p16f1509.inc, header/p16f1784.inc,
    header/p18f24j11.inc, header/p18f44j11.inc, header/p18f24j50.inc,
    header/p18f44j50.inc, header/p18lf25j11.inc, header/p18lf45j11.inc,
    header/p18lf25j50.inc, header/p18lf45j50.inc, header/p16lf1503.inc,
    header/p16lf1782.inc, header/p16lf1786.inc, header/p18f66j55.inc,